--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "lighthouse": "GoogleChrome/lighthouse",
     "minimist": "^1.2.0",
+    "ora": "^0.3.0",
     "rx": "4.1.0"
   },
   "bin": {
