--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typings": "1.5.0"
   },
   "dependencies": {
+    "eazy-logger": "^3.0.2",
     "lighthouse": "GoogleChrome/lighthouse",
     "minimist": "^1.2.0",
     "ora": "^0.3.0",
