--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   ],
   "scripts": {
     "test": "tsc",
+    "prepublish": "tsc",
     "build-cli": "cd node_modules/lighthouse/lighthouse-cli && npm i && npm run build"
   },
   "devDependencies": {
-    "typescript": "2.0.6",
+    "typescript": "^2.2.2",
     "typings": "1.5.0"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "lighthouse": "^1.6.3",
     "minimist": "^1.2.0",
     "ora": "^0.3.0",
+    "pretty-bytes": "^4.0.2",
     "rx": "4.1.0"
   },
   "bin": {
